--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,15 +12,20 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "express": "^4.21.0",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
+    "nodemailer": "^6.9.15",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.12",
+    "twilio": "^5.3.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
