--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "stripe": "^16.12.0",
     "tailwindcss": "^3.4.12",
     "twilio": "^5.3.1",
