--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
@@ -18,6 +19,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "express": "^4.21.0",
+    "firebase": "^10.13.2",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
     "nodemailer": "^6.9.15",
