--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 REACT_APP_AUTH0_DOMAIN=dev-lhwdzzr2qj2rsblv.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=gWZG4iKSzMicWfsbOTeLdapFunLyqZoo
+AWS_ACCESS_KEY_ID=access-key-placeholder
+AWS_SECRET_ACCESS_KEY=secret-key-placeholder
+AWS_REGION=region-placeholder
+AWS_BUCKET_NAME=bucket-name-placeholder
+PORT=3000
