--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "^2.8.0",
@@ -17,11 +18,14 @@
     "@types/react-dom": "^18.3.0",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase": "^10.13.2",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
