--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
-    "types": ["node", "react"]
-  },
+    "types": ["node", "react"],
   "include": [
     "src"
   ]
+}
 }
