--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
     "aws-sdk": "^2.1691.0",
@@ -36,7 +34,6 @@
     "stripe": "^16.12.0",
     "tailwindcss": "^3.4.12",
     "twilio": "^5.3.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -63,5 +60,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
+    "typescript": "^5.6.2"
   }
 }
