--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_COGNITO_USER_POOL_ID=us-east-2_thXvS5QAo
 REACT_APP_COGNITO_CLIENT_ID=qdoqfkkc4198cit56v5brlucd
+REACT_APP_COGNITO_REDIRECT_URI=http://localhost:3000/login-callback
+REACT_APP_COGNITO_DOMAIN=https://fibb.auth.us-east-2.amazoncognito.com
 
