Fixed Cognito need to add UserPool config

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ REACT_APP_COGNITO_USER_POOL_ID=us-east-2_thXvS5QAo
 REACT_APP_COGNITO_CLIENT_ID=qdoqfkkc4198cit56v5brlucd
 REACT_APP_COGNITO_REDIRECT_URI=http://localhost:3000/login-callback
 REACT_APP_COGNITO_DOMAIN=https://fibb.auth.us-east-2.amazoncognito.com
+REACT_APP_COGNITO_CLIENT_SECRET=ravoufscnk4fcfvt4as1ii7if49jqcpnib9u8pjj6og4q65gduv
 
