--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "react"]
+    "types": ["node", "react"],
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["src"]
 }
