--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@aws-amplify/backend": "^1.3.0",
+    "@aws-amplify/ui-react": "^6.5.1",
     "@aws-sdk/client-s3": "^3.658.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.4",
     "@radix-ui/react-slot": "^1.1.0",
@@ -17,8 +19,10 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
+    "aws-amplify": "^6.6.2",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "dotenv-safe": "^9.1.0",
     "express": "^4.21.0",
     "firebase": "^10.13.2",
