--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 REACT_APP_USER_POOL_ID=us-east-2_thXvS5QAo
 REACT_APP_USER_POOL_WEB_CLIENT_ID=6gtvb0taqenutsbr0097qbrdeo
+REACT_APP_AWS_REGION=us-east-2
 REACT_APP_COGNITO_REDIRECT_URI=http://localhost:3000/login-callback
 REACT_APP_COGNITO_DOMAIN=https://fibb.auth.us-east-2.amazoncognito.com
 #REACT_APP_COGNITO_CLIENT_SECRET=ravoufscnk4fcfvt4as1ii7if49jqcpnib9u8pjj6og4q65gduv
