--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@aws-amplify/backend": "^1.3.0",
     "@aws-amplify/ui-react": "^6.5.1",
     "@aws-sdk/client-s3": "^3.658.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.4",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/react-stripe-js": "^2.8.0",
@@ -33,6 +37,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
