--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-webcam": "^7.2.0",
