Revert "secret hash - no MFA"
This reverts commit 2fbaa1bc11a27d1b48cf2600d7ba8dca60627590.

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_USER_POOL_ID=us-east-2_X2Mbwxe7p
-REACT_APP_USER_POOL_WEB_CLIENT_ID=1iab5qbdp2de6ecc0oethudrm6
+REACT_APP_USER_POOL_ID=us-east-2_thXvS5QAo
+REACT_APP_USER_POOL_WEB_CLIENT_ID=6gtvb0taqenutsbr0097qbrdeo
 REACT_APP_AWS_REGION=us-east-2
-REACT_APP_COGNITO_REDIRECT_URI=https://fibb.auth.us-east-2.amazoncognito.com/oauth2/idpresponse
-REACT_APP_COGNITO_DOMAIN=https://fibb2.auth.us-east-2.amazoncognito.com
-REACT_APP_COGNITO_CLIENT_SECRET=1q9mjgdo7lf8drfdqi3secdtvpc60q0ndp7tl202sjp1ci2marq1
+REACT_APP_COGNITO_REDIRECT_URI=http://localhost:3000/login-callback
+REACT_APP_COGNITO_DOMAIN=https://fibb.auth.us-east-2.amazoncognito.com
+#REACT_APP_COGNITO_CLIENT_SECRET=ravoufscnk4fcfvt4as1ii7if49jqcpnib9u8pjj6og4q65gduv
 
