--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
-    "aws-amplify": "^6.6.2",
+    "aws-amplify": "^6.6.3",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
@@ -76,8 +76,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.9",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.6.2"
+    "typescript": "^4.9.5"
   }
 }
