--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@aws-amplify/auth": "^6.5.0",
     "@aws-amplify/backend": "^1.3.0",
     "@aws-amplify/ui-react": "^6.5.1",
     "@aws-sdk/client-s3": "^3.658.1",
@@ -18,14 +19,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
     "amazon-cognito-identity-js": "^6.3.12",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
-    "aws-amplify": "^6.6.2",
+    "aws-amplify": "^6.6.3",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv-safe": "^9.1.0",
     "express": "^4.21.0",
@@ -76,6 +79,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
     "typescript": "^5.6.2"
