Added Photo Component

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.108",
+    "@types/react-slick": "^0.23.13",
     "amazon-cognito-identity-js": "^6.3.12",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
@@ -41,7 +42,9 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
+    "slick-carousel": "^1.8.1",
     "stripe": "^16.12.0",
     "tailwindcss": "^3.4.12",
     "twilio": "^5.3.1",
