--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
