--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@auth0/auth0-react": "^2.2.4",
     "@aws-amplify/backend": "^1.3.0",
     "@aws-amplify/ui-react": "^6.5.1",
-    "@aws-sdk/client-s3": "^3.658.1",
+    "@aws-sdk/client-s3": "^3.663.0",
+    "@aws-sdk/s3-request-presigner": "^3.663.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fal-ai/serverless-client": "^0.14.3",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.4",
