Photo Gallery Updates

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ REACT_APP_USER_POOL_WEB_CLIENT_ID=2qqge1qev52e1dishojjknb5r
 REACT_APP_AWS_REGION=us-east-2
 REACT_APP_COGNITO_REDIRECT_URI=https://fibb.auth.us-east-2.amazoncognito.com/oauth2/idpresponse
 REACT_APP_COGNITO_DOMAIN=https://fibb3.auth.us-east-2.amazoncognito.com
-
+REACT_APP_S3_BUCKET=s3-user-photos 
 
