--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@aws-amplify/backend": "^1.3.0",
+    "@aws-amplify/storage": "^6.6.8",
     "@aws-amplify/ui-react": "^6.5.1",
-    "@aws-sdk/client-s3": "^3.663.0",
+    "@aws-sdk/client-s3": "^3.664.0",
     "@aws-sdk/s3-request-presigner": "^3.663.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
