--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@aws-amplify/api": "^6.0.53",
+    "@aws-amplify/api-rest": "^4.0.51",
     "@aws-amplify/backend": "^1.3.0",
     "@aws-amplify/storage": "^6.6.8",
     "@aws-amplify/ui-react": "^6.5.1",
@@ -28,7 +30,7 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "auth0": "^4.10.0",
     "autoprefixer": "^10.4.20",
-    "aws-amplify": "^6.6.3",
+    "aws-amplify": "^6.6.4",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
@@ -50,7 +52,7 @@
     "react-slick": "^0.30.2",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
-    "stripe": "^16.12.0",
+    "stripe": "^17.1.0",
     "tailwindcss": "^3.4.12",
     "twilio": "^5.3.1",
     "web-vitals": "^2.1.4"
