--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
     "multer": "^1.4.5-lts.1",
+    "next": "^14.2.14",
     "nodemailer": "^6.9.15",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
