--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "types": ["node", "react"],
     "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["src"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
